# spider

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  configure.scan
mock/: mockpi.c  mockpi.h
src/: Makefile.am  Makefile.in  control.c  control.cpp  control.h  motor.c  motor.cpp  motor.h  setup.h  spider.c  stepper.c  stepper.h
test/: Makefile  Makefile.am  Makefile.in  test_stepper.c
